--- a/JenkinsFile
+++ b/JenkinsFile
@@ -4,6 +4,9 @@ pipeline {
     stage('Source') { 
       steps {
 			// Some Step
+			//chekout
+checkout([$class: 'GitSCM', branches: [[name: '*/master']], doGenerateSubmoduleConfigurations: false, extensions: [], submoduleCfg: [], userRemoteConfigs: [[url: 'https://github.com/g0t4/jenkins2-course-spring-boot.git']]])
+
       }
     }
     stage('Compile') { 
@@ -14,6 +17,8 @@ pipeline {
       }
       steps {
 			// Some Step
+			//build using maven
+			powershell label: '', script: 'mvn clean package'
       }
     }
   }
