Updated Tool Names in Jenkins file

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -12,8 +12,8 @@ checkout([$class: 'GitSCM', branches: [[name: '*/master']], doGenerateSubmoduleC
     stage('Compile') { 
       tools {
         // Specify Tool Name from your global tool configuration
-		jdk 'jdk11'
-        maven 'maven-3.6.1'
+		jdk 'jdk8'
+        maven 'MavenBuilder'
       }
       steps {
 			// Some Step
